--- a/index.html
+++ b/index.html
@@ -1,13 +1,45 @@
+
 <!DOCTYPE html>
 <html>
-<head>
-	<title></title>
-	<link rel="stylesheet" href="/node_modules/kingtable/dist/styles/kingtable.core.css" />
-	<link rel="stylesheet" href="/node_modules/kingtable/dist/styles/kingtable.clear.css" />
-</head>
-<body class="theme-clear">
-<div id="main-table"></div>
-<script src="/node_modules/kingtable/dist/kingtable.js"></script> 
-<script type="module" src="app.js"></script>
-</body>
+    <head>
+        <title>Pivot Demo</title>
+        <!-- external libs from cdnjs -->
+        <script
+		  src="/lib/jquery-3.4.1.min.js"
+		  integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="></script>
+        <script
+		  src="/lib/jquery-ui.min.js"
+		  integrity="sha256-VazP97ZCwtekAsvgPBSUwPFKdrwD3unUfSGVYrahUqU="></script>
+
+        <!-- PivotTable.js libs from ../dist -->
+        <!--
+        <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/pivottable/2.13.0/pivot.min.css">
+        <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/pivottable/2.14.0/pivot.min.js"></script>
+        <script type="text/javascript" src="https://pivottable.js.org/dist/pivot.fr.js"></script>
+        <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui-touch-punch/0.2.3/jquery.ui.touch-punch.min.js"></script>
+    -->
+        <link rel="stylesheet" type="text/css" href="/lib/pivot.min.css">
+        <script type="text/javascript" src="lib/pivot.min.js"></script>
+        <script type="text/javascript" src="/lib/pivot.fr.js"></script>
+        <script type="text/javascript" src="/lib/jquery.ui.touch-punch.min.js"></script>
+        <style>
+            body {font-family: Verdana;}
+        </style>
+    </head>
+    <body>
+        <script type="text/javascript">
+    // This example shows French localization
+    // using the "Canadian Parliament 2012" dataset.
+
+    $(function(){
+        $.getJSON("/data/dump.json", function(mps) {
+            $("#output").pivotUI(mps,
+                { rows: ["cardId"], cols: ["msg"] },
+                false, "fr"
+            );
+        });
+     });
+        </script>
+        <div id="output" style="margin: 30px;"></div>
+    </body>
 </html>
