--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 		  src="/lib/jquery-ui.min.js"
 		  integrity="sha256-VazP97ZCwtekAsvgPBSUwPFKdrwD3unUfSGVYrahUqU="></script>
 
+        <script src="/lib/plugins/plotly-basic-latest.min.js"></script>
+
         <!-- PivotTable.js libs from ../dist -->
         <!--
         <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/pivottable/2.13.0/pivot.min.css">
@@ -22,6 +24,7 @@
         <script type="text/javascript" src="lib/pivot.min.js"></script>
         <script type="text/javascript" src="/lib/pivot.fr.js"></script>
         <script type="text/javascript" src="/lib/jquery.ui.touch-punch.min.js"></script>
+        <script src="/lib/plugins/plotly_renderers.js"></script>
         <style>
             body {font-family: Verdana;}
         </style>
@@ -32,10 +35,22 @@
     // using the "Canadian Parliament 2012" dataset.
 
     $(function(){
+
+        var derivers = $.pivotUtilities.derivers;
+        var renderers = $.extend($.pivotUtilities.renderers,
+            $.pivotUtilities.plotly_renderers);
+
         $.getJSON("/data/dump.json", function(mps) {
             $("#output").pivotUI(mps,
-                { rows: ["cardId"], cols: ["msg"] },
-                false, "fr"
+                {
+                	rows: ["cardId"],
+                	cols: ["msg"],
+                	renderers: renderers,
+	                rendererName: "Horizontal Stacked Bar Chart",
+	                rowOrder: "value_a_to_z", colOrder: "value_z_to_a",
+                },
+                false,
+                "fr"
             );
         });
      });
