--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
         <title>Pivot Demo</title>
         <!-- external libs from cdnjs -->
         <script
-		  src="/lib/jquery-3.4.1.min.js"
+		  src="lib/jquery-3.4.1.min.js"
 		  integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="></script>
         <script
-		  src="/lib/jquery-ui.min.js"
+		  src="lib/jquery-ui.min.js"
 		  integrity="sha256-VazP97ZCwtekAsvgPBSUwPFKdrwD3unUfSGVYrahUqU="></script>
 
-        <script src="/lib/plugins/plotly-basic-latest.min.js"></script>
+        <script src="lib/plugins/plotly-basic-latest.min.js"></script>
 
         <!-- PivotTable.js libs from ../dist -->
         <!--
@@ -22,9 +22,9 @@
     -->
         <link rel="stylesheet" type="text/css" href="/lib/pivot.min.css">
         <script type="text/javascript" src="lib/pivot.min.js"></script>
-        <script type="text/javascript" src="/lib/pivot.fr.js"></script>
-        <script type="text/javascript" src="/lib/jquery.ui.touch-punch.min.js"></script>
-        <script src="/lib/plugins/plotly_renderers.js"></script>
+        <script type="text/javascript" src="lib/pivot.fr.js"></script>
+        <script type="text/javascript" src="lib/jquery.ui.touch-punch.min.js"></script>
+        <script src="lib/plugins/plotly_renderers.js"></script>
         <style>
             body {font-family: Verdana;}
         </style>
