remove / in libs in index.html

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <script type="text/javascript" src="https://pivottable.js.org/dist/pivot.fr.js"></script>
         <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui-touch-punch/0.2.3/jquery.ui.touch-punch.min.js"></script>
     -->
-        <link rel="stylesheet" type="text/css" href="/lib/pivot.min.css">
+        <link rel="stylesheet" type="text/css" href="lib/pivot.min.css">
         <script type="text/javascript" src="lib/pivot.min.js"></script>
         <script type="text/javascript" src="lib/pivot.fr.js"></script>
         <script type="text/javascript" src="lib/jquery.ui.touch-punch.min.js"></script>
