--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 		  src="lib/jquery-ui.min.js"
 		  integrity="sha256-VazP97ZCwtekAsvgPBSUwPFKdrwD3unUfSGVYrahUqU="></script>
 
-        <!-- <script src="lib/plugins/plotly-basic-latest.min.js"></script> -->
+        <script src="lib/plugins/plotly-basic-latest.min.js"></script>
 
         <!-- PivotTable.js libs from ../dist -->
         <!--
@@ -24,7 +24,7 @@
         <script type="text/javascript" src="lib/pivot.min.js"></script>
         <script type="text/javascript" src="lib/pivot.fr.js"></script>
         <script type="text/javascript" src="lib/jquery.ui.touch-punch.min.js"></script>
-        <!-- <script src="lib/plugins/plotly_renderers.js"></script> -->
+        <script src="lib/plugins/plotly_renderers.js"></script>
         <style>
             body {font-family: Verdana;}
         </style>
@@ -35,19 +35,19 @@
     // using the "Canadian Parliament 2012" dataset.
 
     $(function(){
-/*
+
         var derivers = $.pivotUtilities.derivers;
         var renderers = $.extend($.pivotUtilities.renderers,
             $.pivotUtilities.plotly_renderers);
-*/
+
         $.getJSON("data/dump.json", function(mps) {
             $("#output").pivotUI(mps,
                 {
-                	rows: ["msg"],
-                	cols: ["cardId"]/*,
+                	rows: ["cardId"],
+                	cols: ["msg"],
                 	renderers: renderers,
 	                rendererName: "Horizontal Stacked Bar Chart",
-	                rowOrder: "value_a_to_z", colOrder: "value_z_to_a",*/
+	                rowOrder: "value_a_to_z", colOrder: "value_z_to_a",
                 },
                 false,
                 "fr"
